2008-01-03  Sven Herzberg  <herzi@gnome-de.org>

	* src/ui/keyboard-properties.c,
	* src/ui/main.c,
	* src/ui/ui-main.c,
	* src/ui/ui-network-client.c,
	* src/ui/ui-network-server.c: replaced <bonobo/bonobo-i18n.h> by
	<glib/gi18n.h>

2008-01-03  Sven Herzberg  <herzi@gnome-de.org>

	* help/C/monkey-bubble.xml: fixed a typo

2008-01-03  Sven Herzberg  <herzi@gnome-de.org>

	* src/monkey/Makefile.am,
	* src/net/Makefile.am: make sure the build supports srcdir != builddir
	(to make testing the upcoming maemo-build easier)

2008-01-03  Sven Herzberg <herzi@gnome-de.org>

	* MAINTAINTERS: added file required by GNOME Subversion

2007-10-14  Yannig Marchegay  <yannig@marchegay.org>

	* configure.in: Added 'oc' to ALL_LINGUAS.

2007-08-27  Satoru SATOH <ss@gnome.gr.jp>

	* help/Makefile.am: Added "ja" to DOC_LINGUAS.

2007-07-09  Laurent Belmonte  <laurent.belmonte@gmail.com>

	* src/net/client.[ch]: add score
	* src/net/game.[c]: send player score
	* src/net/message-handler.[ch]: recv/send score
	message
	* src/ui/game-network-player.c: handle score
	* src/view/mini-view.[ch]: add method set_score

2007-07-08  Laurent Belmonte  <laurent.belmonte@gmail.com>


	* src/ui/game-2-player.c: add sfx on 2 players game
	* src/ui/game-network-player.c: add sfx on network game

2007-07-08  Laurent Belmonte  <laurent.belmonte@gmail.com>

        merge network_fix branch

2007-07-08  Laurent Belmonte  <laurent.belmonte@gmail.com>

        merge audio branch

2007-07-08  Laurent Belmonte  <laurent.belmonte@gmail.com>

	* src/net/game.c: remove timeout_idle when game finished

2007-07-08  Laurent Belmonte  <laurent.belmonte@gmail.com>

	* src/ui/game-network-player.c : enable auto shoot

2007-07-08  Laurent Belmonte  <laurent.belmonte@gmail.com>

	* src/monkey/monkey.[ch]: change how add row is make
	* src/net/game.c: change how row is add
	* src/net/message-handler.[ch],
	* src/net/monkey-marshal.list:  add new message
	* src/ui/game-2-player.c: change how add row is make
