@@ -1,5 +1,11 @@
 2008-01-03  Sven Herzberg  <herzi@gnome-de.org>
 
+	* configure.in,
+	* src/ui/Makefile.am: added checks to prepare the support of both a
+	maemo-ui and a gnome-ui
+
+2008-01-03  Sven Herzberg  <herzi@gnome-de.org>
+
 	* src/ui/keyboard-properties.c,
 	* src/ui/main.c,
 	* src/ui/ui-main.c,
